# final-lab

./: Makefile  README.md  docker-compose.yml  pyproject.toml  reponses.nom.prenom.txt
esme_mongodb/: Dockerfile
esme_mongodb/esme_data/: mongoimport.sh  prescriptions.json
esme_postgresql/: Dockerfile
esme_postgresql/data/: hospital.sql.dump  load_dumps.sh
esme_pyspark/: Dockerfile
generate_data/: company_factory_data.py  sensor_factory_data.py  spark_sensors_data.py
generate_data/output/: companies.csv  factories.csv  product_market.csv  product_parts.csv  production_line_reports.csv  production_lines.csv  products.csv  sensors.json
output/: sensors.json
