[tool.poetry]
name = "final-lab"
version = "0.1.0"
description = ""
authors = ["Luc & Maxence"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
faker = "^33.3.0"
pandas = "^2.2.3"
numpy = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
